fix notification container not allowing clicks behind it

--- a/src/app/notification/notification.component.less
+++ b/src/app/notification/notification.component.less
@@ -1,4 +1,5 @@
 #notification-container {
+	pointer-events: none;
 	position: fixed;
 	right: 0;
 	top: 0;
